--- a/instagram-app/package.json
+++ b/instagram-app/package.json
@@ -8,8 +8,9 @@
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.0",
     "reactstrap": "^8.0.0",
-    "styled-components": "^4.2.0"
-  },
+    "styled-components": "^4.2.0",
+    "moment": "^2.24.0"
+  },  
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
